docs: show the report and compare the alternatives